--- a/src/components/content/Content.css
+++ b/src/components/content/Content.css
@@ -1,6 +1,8 @@
 .content-container {
 	position: absolute;
 	z-index: 0;
+	overflow-y: auto;
+	overflow-x: hidden;
 	width: 100vw;
 	height: 78vh;
 	top: 22vh;
