changes to body of page

--- a/src/components/dev-content/dev-content.css
+++ b/src/components/dev-content/dev-content.css
@@ -1,11 +1,20 @@
 .dev-content-container {
     display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-content: center;
     background-color: #5086B9;
     width: inherit;
     height: 100%;
 }
 .dev-computer {
-    width: 38.5rem;
-    height: 24.6rem;
+    margin: 6rem;
     background-image: url("./mon.svg");
+}
+
+.dev-text {
+    text-align: left;
+    margin: 6rem;
+    font-family: 'Julius Sans One', sans-serif;
+    font-size: 4rem;
+    color: white;
 }
