--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   flex-flow: column;
   height: 100vh;
   width: 100vw;
+  background: url('./cogs.svg');
+  background-position: center;
+  background-size: cover;
+  background-color: #5086B9;
 }
 
 /** Unused **/
