--- a/src/components/dev-footer/dev-footer.css
+++ b/src/components/dev-footer/dev-footer.css
@@ -18,4 +18,11 @@
 .dev-social-media {
     width: 4rem;
     height: auto;
+    filter: drop-shadow(0px 0px 10px rgb(59, 108, 153));
+    transition: 0.3s;
+}
+
+.dev-social-media:hover {
+    width: 5rem;
+    height: auto;
 }
