--- a/src/components/dev-header/dev-header.css
+++ b/src/components/dev-header/dev-header.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 414px) and (max-height: 896px) {
+@media screen and (max-width: 414px) and (max-height: 896px) {
     .dev-logo-container {
         margin-left: 2rem !important;
         /* background-color: red; */
