--- a/src/components/dev-body/dev-body.css
+++ b/src/components/dev-body/dev-body.css
@@ -1,21 +1,46 @@
-@media only screen and (max-width: 414px) and (max-height: 896px) {
+@media only screen and (max-height: 400px){
+    .dev-image-container {
+        display:none !important;
+    }
+}
+@media only screen and (max-height: 650px){
+    .dev-text-container {
+        display:none !important;
+    }
+}
+@media only screen and (max-width: 1020px) {
     .dev-body-container {
         display: flex !important;
+        flex-direction: column;
+        align-items: center;
+        /* justify-content: center; */
+        /* display: flex !important; */
+        /* overflow-y: scroll; */
     }
 
     .dev-image-container {
-        /* margin: 6rem; */
-        margin-left: 2rem !important;
-        margin-right: 2rem !important;
+        display: flex;
+        justify-content: center;
+        margin-top: 4rem !important;
+        margin-left: 6rem !important;
+        margin-right: 6rem !important;
+        margin-bottom: 4vh !important;
+        width: inherit;
+        height: auto;
+        /* transition: bottom 0.5s; */
+        /* display: flex !important; */
+    }
+
+    .dev-image {
+        width: 20rem !important;
+        height: auto;
     }
 
     .dev-text-container {
-        display: flex;
+        display: flex ;
         justify-content: center;
         align-items: center;
-        font-family: 'Julius Sans One', sans-serif;
-        font-size: 1rem !important;
-        color: white;
+        text-align: center;
         margin-right: 1rem !important;
         margin-left:1rem !important;
         filter: drop-shadow(0px 0px 10px rgb(59, 108, 153));
@@ -31,8 +56,8 @@
 .dev-image-container {
     /* margin: 6rem; */
     margin-left: 10rem;
-    margin-right: 3rem;
 }
+
 .dev-image {
     width: 100%;
     height: auto;
@@ -42,10 +67,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Julius Sans One', sans-serif;
-    font-size: 2.2vw;
-    color: white;
     margin-right: 6rem;
     margin-left:6rem;
+}
+
+.dev-text-container span {
+    font-family: 'Julius Sans One', sans-serif;
+    font-size: 1.6rem;
+    color: white;
     filter: drop-shadow(0px 0px 10px rgb(59, 108, 153));
 }
