--- a/src/components/dev-body/dev-body.css
+++ b/src/components/dev-body/dev-body.css
@@ -3,7 +3,7 @@
         display:none !important;
     }
 }
-@media only screen and (max-height: 650px){
+@media only screen and (max-height: 610px){
     .dev-text-container {
         display:none !important;
     }
@@ -13,37 +13,26 @@
         display: flex !important;
         flex-direction: column;
         align-items: center;
-        /* justify-content: center; */
-        /* display: flex !important; */
-        /* overflow-y: scroll; */
     }
 
     .dev-image-container {
-        display: flex;
-        justify-content: center;
         margin-top: 4rem !important;
         margin-left: 6rem !important;
         margin-right: 6rem !important;
         margin-bottom: 4vh !important;
-        width: inherit;
-        height: auto;
-        /* transition: bottom 0.5s; */
-        /* display: flex !important; */
     }
 
     .dev-image {
         width: 20rem !important;
-        height: auto;
     }
 
     .dev-text-container {
-        display: flex ;
-        justify-content: center;
-        align-items: center;
         text-align: center;
         margin-right: 1rem !important;
         margin-left:1rem !important;
-        filter: drop-shadow(0px 0px 10px rgb(59, 108, 153));
+    }
+    .dev-text-container span {
+        font-size: 1.4rem !important;
     }
 }
 
@@ -75,5 +64,5 @@
     font-family: 'Julius Sans One', sans-serif;
     font-size: 1.6rem;
     color: white;
-    filter: drop-shadow(0px 0px 10px rgb(59, 108, 153));
+    filter: drop-shadow(2px 2px 10px rgb(54, 99, 145));
 }
